# vsms

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.sh
kube/: apply.sh  vsms.yaml
src/: main.rs  sanitizer.rs
