[package]
name = "vsms"
version = "0.1.0"
authors = ["Q <q@magicalcodewit.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-web-async-await = { git = "https://github.com/TheEnbyperor/actix-web-async-await" }
rust-keycloak = { git = "https://github.com/TheEnbyperor/rust-keycloak" }
openssl = "0.10"
failure = "0.1"
sentry = "0.17"
openssl-probe = "0.1.2"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenv = "0.9.0"
pretty_env_logger = "0.3"
listenfd = "0.3"
actix = "0.8"
log = "0.4"
base64 = "0.11"
futures-preview = { version = "0.3.0-alpha.19", features = ["compat"] }
futures01 = { version = "0.1", package = "futures" }
phonenumber = "0.2"
hkdf = "0.8"
sha2 = "0.8"
regex = "1"
lazy_static = "1.4.0"
